Fri Sep 24 12:41:13 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
          Updated Remedy platforms

        * ACEXML/parser/parser/Parser.h:
        * ace/Containers_T.h:
        * ace/Containers_T.cpp:
        * ace/OS_NS_string.h:
        * ace/OS_NS_wchar.h:
        * apps/JAWS/clients/WebSTONE/src/nsapi-includes/base/shexp.h:
          Fixed typo

Fri Sep 24 12:32:44 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Containers_T.h:
        * ace/Containers_T.cpp:
        * ace/OS_NS_string.h:
        * ace/OS_NS_wchar.h:
          Fixed typo

Fri Sep 24 12:24:01 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
          Documented vc10, thanks to Paul Carter <pcarter at scires dot com>
          for reporting this.

Fri Sep 24 11:44:06 UTC 2010  Olli Savia  <ops@iki.fi>

        * ace/ACE.h:
          Adjusted ACE::is_equal() comment to make fuzz happy.

Fri Sep 24 09:35:00 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * examples/C++NPv2/AIO_Client_Logging_Daemon.h:
          Removed code that is problematic for GCC 2.95.3 in a crossbuild
          for LynxOS 4.0.

Fri Sep 24 07:35:27 UTC 2010  Olli Savia  <ops@iki.fi>

        * ace/ACE.h:
          Added a simple helper ACE::is_equal() which compares equality of two
          objects without using operator==. This is useful for comparing floating
          point values.

        * tests/OS_Test.cpp:
          Use ACE::is_equal() instead of local copy.

Thu Sep 23 16:14:12 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * ace/SSL/ssl.mpc:
        * bin/MakeProjectCreator/config/pkgconfig.mpb:
        * bin/MakeProjectCreator/templates/gnu.mpd:
        * bin/ace_install_pkgconfig.pl:
        * include/makeinclude/rules.lib.GNU:
        * include/makeinclude/wrapper_macros.GNU:

          Added support for installing pkg-config (.pc) files as part of the