@@ -65,6 +65,8 @@ public:
 
   /// Close down the pipe HANDLEs;
   int close (void);
+  int close_read (void);
+  int close_write (void);
 
   // = Accessors.
 
@@ -152,6 +154,7 @@ public:
 
 private:
   ACE_HANDLE handles_[2];
+  int close_handle (int which);
 };
 
 ACE_END_VERSIONED_NAMESPACE_DECL
