@@ -185,4 +185,19 @@ ACE_Pipe::recv (void *buf, size_t n,
                        overlapped);
 }
 
+ACE_INLINE int
+ACE_Pipe::close_handle (int which)
+{
+  int result = 0;
+
+  // Note that the following will work even if we aren't closing down
+  // sockets because <ACE_OS::closesocket> will just call <::close> in
+  // that case!
+
+  if (this->handles_[which] != ACE_INVALID_HANDLE)
+    result = ACE_OS::closesocket (this->handles_[which]);
+  this->handles_[which] = ACE_INVALID_HANDLE;
+  return result;
+}
+
 ACE_END_VERSIONED_NAMESPACE_DECL
